# dvd-jepa

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.pre-commit-hooks/: clear_notebook_output.py
assets/: metrics.json
dvd_jepa/: __init__.py  config.py  models.py  train.py  world.py
notebooks/: dvd_jepa.ipynb
scripts/: train.py
